@@ -1,3 +1,10 @@
+2006-09-15  Rodrigo Moya <rodrigo@novell.com>
+
+	Fixes #356074
+
+	* gnome-keyboard-properties-xkb.c (set_model_text): make sure 'model'
+	is never NULL. Original patch from Brian Cameron <brian.cameron@sun.com>.
+
 2006-08-07  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #348847
